# baseStella Core sources

baseStellaSrc =  [
   'main.c',
   'core/sdl/config.c',
   'core/sdl/error.c',
   'core/sdl/fileio.c',
   'core/sdl/unzip.c',
   'core/core/debug/cpuhook.c',
   'core/core/sound/sound.c',
   'core/core/sound/ym3438.c',
   'core/core/sound/opll.c',
   'core/core/sound/eq.c',
   'core/core/sound/ym2413.c',
   'core/core/sound/blip_buf.c',
   'core/core/sound/psg.c',
   'core/core/sound/ym2612.c',
   'core/core/tremor/framing.c',
   'core/core/tremor/block.c',
   'core/core/tremor/vorbisfile.c',
   'core/core/tremor/bitwise.c',
   'core/core/tremor/synthesis.c',
   'core/core/tremor/codebook.c',
   'core/core/tremor/registry.c',
   'core/core/tremor/mdct.c',
   'core/core/tremor/floor1.c',
   'core/core/tremor/sharedbook.c',
   'core/core/tremor/info.c',
   'core/core/tremor/mapping0.c',
   'core/core/tremor/res012.c',
   'core/core/tremor/window.c',
   'core/core/tremor/floor0.c',
   'core/core/state.c',
   'core/core/membnk.c',
   'core/core/vdp_ctrl.c',
   'core/core/z80/z80.c',
   'core/core/io_ctrl.c',
   'core/core/ntsc/sms_ntsc.c',
   'core/core/ntsc/md_ntsc.c',
   'core/core/m68k/s68kcpu.c',
   'core/core/m68k/m68kcpu.c',
   'core/core/memz80.c',
   'core/core/genesis.c',
   'core/core/vdp_render.c',
   'core/core/system.c',
   'core/core/cd_hw/cd_cart.c',
   'core/core/cd_hw/libchdr/src/chd.c',
   'core/core/cd_hw/libchdr/src/bitstream.c',
   'core/core/cd_hw/libchdr/src/flac.c',
   'core/core/cd_hw/libchdr/src/huffman.c',
   'core/core/cd_hw/libchdr/src/cdrom.c',
   'core/core/cd_hw/libchdr/deps/zlib/inflate.c',
   'core/core/cd_hw/libchdr/deps/zlib/adler32.c',
   'core/core/cd_hw/libchdr/deps/zlib/inftrees.c',
   'core/core/cd_hw/libchdr/deps/zlib/inffast.c',
   'core/core/cd_hw/libchdr/deps/zlib/zutil.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/crc.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/md5.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/format.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse2.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/cpu.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse41.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/bitmath.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/bitreader.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/memory.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_sse.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/fixed.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/lpc_intrin_avx2.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/lpc.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/stream_decoder.c',
   'core/core/cd_hw/libchdr/deps/libFLAC/float.c',
   'core/core/cd_hw/libchdr/deps/lzma/LzFind.c',
   'core/core/cd_hw/libchdr/deps/lzma/LzmaEnc.c',
   'core/core/cd_hw/libchdr/deps/lzma/LzmaDec.c',
   'core/core/cd_hw/cdc.c',
   'core/core/cd_hw/pcm.c',
   'core/core/cd_hw/gfx.c',
   'core/core/cd_hw/scd.c',
   'core/core/cd_hw/cdd.c',
   'core/core/input_hw/sportspad.c',
   'core/core/input_hw/activator.c',
   'core/core/input_hw/mouse.c',
   'core/core/input_hw/paddle.c',
   'core/core/input_hw/gamepad.c',
   'core/core/input_hw/input.c',
   'core/core/input_hw/terebi_oekaki.c',
   'core/core/input_hw/teamplayer.c',
   'core/core/input_hw/graphic_board.c',
   'core/core/input_hw/lightgun.c',
   'core/core/input_hw/xe_1ap.c',
   'core/core/mem68k.c',
   'core/core/cart_hw/svp/ssp16.c',
   'core/core/cart_hw/svp/svp.c',
   'core/core/cart_hw/areplay.c',
   'core/core/cart_hw/eeprom_spi.c',
   'core/core/cart_hw/sram.c',
   'core/core/cart_hw/eeprom_93c.c',
   'core/core/cart_hw/sms_cart.c',
   'core/core/cart_hw/eeprom_i2c.c',
   'core/core/cart_hw/ggenie.c',
   'core/core/cart_hw/md_cart.c',
   'core/core/cart_hw/megasd.c',
   'core/core/loadrom.c',
]

baseStellaIncludeDirs = [
  '.',
  'core/core',
  'core/core/cart_hw',
  'core/core/cart_hw/svp',
  'core/core/cd_hw/libchdr/deps/libFLAC/include',
  'core/core/cd_hw/libchdr/deps/lzma',
  'core/core/cd_hw/libchdr/deps/zlib',
  'core/core/cd_hw',
  'core/core/debug',
  'core/core/input_hw',
  'core/core/m68k',
  'core/core/ntsc',
  'core/core/sound',
  'core/core/tremor',
  'core/core/z80',
  'core/sdl',
  'core/sdl/sdl2',
]

baseStellaCompileArgs = [
  '-D_Stella_LSB_FIRST',
  '-DLSB_FIRST',
  '-DUSE_16BPP_RENDERING',
  '-DUSE_LIBTREMOR',
  '-DUSE_LIBCHDR',
  '-DMAXROMSIZE=33554432',
  '-DHAVE_YM3438_CORE',
  '-DHAVE_OPLL_CORE',
  '-DENABLE_SUB_68K_ADDRESS_ERROR_EXCEPTIONS',
  '-DHAVE_YM3438_CORE',
  '-DUSE_LIBVORBIS',
  '-DUSE_LIBTREMOR',
  '-DUSE_LIBCHDR',
  '-DHAVE_ALLOCA_H',
  '-DPACKAGE_VERSION="1.3.2"',
  '-DFLAC_API_EXPORTS',
  '-DFLAC__HAS_OGG=0',
  '-DHAVE_LROUND',
  '-DHAVE_STDINT_H',
  '-DHAVE_SYS_PARAM_H',
  '-D_7ZIP_ST'
]

# baseStella Core Configuration

 baseStellaDependency = declare_dependency(
  compile_args        : [  baseStellaCompileArgs ],
  include_directories : include_directories(baseStellaIncludeDirs),
  sources             : [ baseStellaSrc ],
  dependencies        : [  
                          dependency('sdl2',  required : true),
                          dependency('zlib',  required : true)
                        ]
 )
