# baseStella Core sources

baseStellaSrc =  [
   'OSystem.cxx',
   'Switches.cxx',
   'FrameBuffer.cxx',
   'renderFlag.cpp',
   'core/src/common/Logger.cxx',
   'core/src/common/tv_filters/NTSCFilter.cxx',
   'core/src/common/tv_filters/AtariNTSC.cxx',
   'core/src/common/EventHandlerSDL2.cxx',
   'core/src/common/HighScoresManager.cxx',
   'core/src/common/AudioSettings.cxx',
   'core/src/common/VideoModeHandler.cxx',
   'core/src/common/PhysicalJoystick.cxx',
   'core/src/common/ThreadDebugging.cxx',
   'core/src/common/TimerManager.cxx',
   'core/src/common/PKeyboardHandler.cxx',
   'core/src/common/PhosphorHandler.cxx',
   'core/src/common/SoundSDL2.cxx',
   'core/src/common/JoyMap.cxx',
   'core/src/common/ZipHandler.cxx',
   'core/src/common/FBSurfaceSDL2.cxx',
   'core/src/common/MouseControl.cxx',
   'core/src/common/PJoystickHandler.cxx',
   'core/src/common/sdl_blitter/BilinearBlitter.cxx',
   'core/src/common/sdl_blitter/BlitterFactory.cxx',
   'core/src/common/sdl_blitter/QisBlitter.cxx',
   'core/src/common/JPGLibrary.cxx',
   'core/src/common/AudioQueue.cxx',
   'core/src/common/StateManager.cxx',
   'core/src/common/DevSettingsHandler.cxx',
   'core/src/common/FpsMeter.cxx',
   'core/src/common/audio/ConvolutionBuffer.cxx',
   'core/src/common/audio/HighPass.cxx',
   'core/src/common/audio/SimpleResampler.cxx',
   'core/src/common/audio/LanczosResampler.cxx',
   'core/src/common/StaggeredLogger.cxx',
   'core/src/common/Base.cxx',
   'core/src/common/FSNodeZIP.cxx',
   'core/src/common/KeyMap.cxx',
   'core/src/common/repository/KeyValueRepositoryJsonFile.cxx',
   'core/src/common/repository/CompositeKVRJsonAdapter.cxx',
   'core/src/common/repository/sqlite/SqliteDatabase.cxx',
   'core/src/common/repository/sqlite/SqliteStatement.cxx',
   'core/src/common/repository/sqlite/SqliteTransaction.cxx',
   'core/src/common/repository/sqlite/AbstractKeyValueRepositorySqlite.cxx',
   'core/src/common/repository/sqlite/KeyValueRepositorySqlite.cxx',
   'core/src/common/repository/sqlite/StellaDb.cxx',
   'core/src/common/repository/sqlite/CompositeKeyValueRepositorySqlite.cxx',
   'core/src/common/repository/KeyValueRepositoryPropertyFile.cxx',
   'core/src/common/repository/CompositeKeyValueRepository.cxx',
   'core/src/common/repository/KeyValueRepositoryConfigfile.cxx',
   'core/src/common/Bezel.cxx',
   'core/src/common/PNGLibrary.cxx',
   'core/src/common/PaletteHandler.cxx',
   'core/src/common/FBBackendSDL2.cxx',
   'core/src/common/RewindManager.cxx',
   'core/src/gui/WhatsNewDialog.cxx',
   'core/src/gui/VideoAudioDialog.cxx',
   'core/src/gui/LoggerDialog.cxx',
   'core/src/gui/EventMappingWidget.cxx',
   'core/src/gui/BrowserDialog.cxx',
   'core/src/gui/RadioButtonWidget.cxx',
   'core/src/gui/StellaSettingsDialog.cxx',
   'core/src/gui/MessageMenu.cxx',
   'core/src/gui/PlusRomsMenu.cxx',
   'core/src/gui/LauncherFileListWidget.cxx',
   'core/src/gui/ProgressDialog.cxx',
   'core/src/gui/RomImageWidget.cxx',
   'core/src/gui/OptionsMenu.cxx',
   'core/src/gui/ScrollBarWidget.cxx',
   'core/src/gui/HelpDialog.cxx',
   'core/src/gui/FileListWidget.cxx',
   'core/src/gui/UndoHandler.cxx',
   'core/src/gui/MessageDialog.cxx',
   'core/src/gui/EmulationDialog.cxx',
   'core/src/gui/ComboDialog.cxx',
   'core/src/gui/InputDialog.cxx',
   'core/src/gui/CheckListWidget.cxx',
   'core/src/gui/NavigationWidget.cxx',
   'core/src/gui/TimeMachineDialog.cxx',
   'core/src/gui/ListWidget.cxx',
   'core/src/gui/DeveloperDialog.cxx',
   'core/src/gui/PlusRomsSetupDialog.cxx',
   'core/src/gui/TimeMachine.cxx',
   'core/src/gui/TabWidget.cxx',
   'core/src/gui/JoystickDialog.cxx',
   'core/src/gui/TimeLineWidget.cxx',
   'core/src/gui/ContextMenu.cxx',
   'core/src/gui/EditTextWidget.cxx',
   'core/src/gui/GlobalPropsDialog.cxx',
   'core/src/gui/OptionsDialog.cxx',
   'core/src/gui/CommandDialog.cxx',
   'core/src/gui/StringListWidget.cxx',
   'core/src/gui/InputTextDialog.cxx',
   'core/src/gui/MessageBox.cxx',
   'core/src/gui/QuadTariDialog.cxx',
   'core/src/gui/AboutDialog.cxx',
   'core/src/gui/EditableWidget.cxx',
   'core/src/gui/UIDialog.cxx',
   'core/src/gui/FavoritesManager.cxx',
   'core/src/gui/RomInfoWidget.cxx',
   'core/src/gui/R77HelpDialog.cxx',
   'core/src/gui/LauncherDialog.cxx',
   'core/src/gui/MinUICommandDialog.cxx',
   'core/src/gui/CommandMenu.cxx',
   'core/src/gui/Dialog.cxx',
   'core/src/gui/ColorWidget.cxx',
   'core/src/gui/GameInfoDialog.cxx',
   'core/src/gui/PopUpWidget.cxx',
   'core/src/gui/Font.cxx',
   'core/src/gui/ToolTip.cxx',
   'core/src/gui/HighScoresDialog.cxx',
   'core/src/gui/SnapshotDialog.cxx',
   'core/src/gui/Launcher.cxx',
   'core/src/gui/HighScoresMenu.cxx',
   'core/src/gui/RomAuditDialog.cxx',
   'core/src/gui/Widget.cxx',
   'core/src/gui/DialogContainer.cxx',
   'core/src/emucore/Genesis.cxx',
   'core/src/emucore/Bankswitch.cxx',
   'core/src/emucore/Cart03E0.cxx',
   'core/src/emucore/CartF0.cxx',
   'core/src/emucore/Cart4K.cxx',
   'core/src/emucore/CartWD.cxx',
   'core/src/emucore/Cart4A50.cxx',
   'core/src/emucore/CartBF.cxx',
   'core/src/emucore/EmulationWorker.cxx',
   'core/src/emucore/CartF6.cxx',
   'core/src/emucore/Cart.cxx',
   'core/src/emucore/CartF4SC.cxx',
   'core/src/emucore/CartCTY.cxx',
   'core/src/emucore/CartF8SC.cxx',
   'core/src/emucore/CartDetector.cxx',
   'core/src/emucore/CartDFSC.cxx',
   'core/src/emucore/Serializer.cxx',
   'core/src/emucore/Cart0840.cxx',
   'core/src/emucore/CartFA.cxx',
   'core/src/emucore/CartX07.cxx',
   'core/src/emucore/Cart2K.cxx',
   'core/src/emucore/Cart3EX.cxx',
   'core/src/emucore/CartDPCPlus.cxx',
   'core/src/emucore/CartBFSC.cxx',
   'core/src/emucore/CartCM.cxx',
   'core/src/emucore/CartEF.cxx',
   'core/src/emucore/CartSB.cxx',
   'core/src/emucore/MD5.cxx',
   'core/src/emucore/Settings.cxx',
   'core/src/emucore/CartBUS.cxx',
   'core/src/emucore/SaveKey.cxx',
   'core/src/emucore/CartDPC.cxx',
   'core/src/emucore/CompuMate.cxx',
   'core/src/emucore/TIASurface.cxx',
   'core/src/emucore/Paddles.cxx',
   'core/src/emucore/CartEFSC.cxx',
   'core/src/emucore/Joystick.cxx',
   'core/src/emucore/Lightgun.cxx',
   'core/src/emucore/KidVid.cxx',
   'core/src/emucore/CartAR.cxx',
   'core/src/emucore/CartFC.cxx',
   'core/src/emucore/Cart3F.cxx',
   'core/src/emucore/FBSurface.cxx',
   'core/src/emucore/Cart3E.cxx',
   'core/src/emucore/GlobalKeyHandler.cxx',
   'core/src/emucore/PointingDevice.cxx',
   'core/src/emucore/CartTVBoy.cxx',
   'core/src/emucore/CartCreator.cxx',
   'core/src/emucore/Console.cxx',
   'core/src/emucore/CartF6SC.cxx',
   'core/src/emucore/Cart4KSC.cxx',
   'core/src/emucore/Props.cxx',
   'core/src/emucore/Thumbulator.cxx',
   'core/src/emucore/DispatchResult.cxx',
   'core/src/emucore/EmulationTiming.cxx',
   'core/src/emucore/PlusROM.cxx',
   'core/src/emucore/CartGL.cxx',
   'core/src/emucore/Cart0FA0.cxx',
   'core/src/emucore/CartMVC.cxx',
   'core/src/emucore/Keyboard.cxx',
   'core/src/emucore/CartFA2.cxx',
   'core/src/emucore/QuadTari.cxx',
   'core/src/emucore/CartFE.cxx',
   'core/src/emucore/CartMDM.cxx',
   'core/src/emucore/CartF4.cxx',
   'core/src/emucore/CartF8.cxx',
   'core/src/emucore/CartCV.cxx',
   'core/src/emucore/EventHandler.cxx',
   'core/src/emucore/Driving.cxx',
   'core/src/emucore/M6532.cxx',
   'core/src/emucore/System.cxx',
   'core/src/emucore/M6502.cxx',
   'core/src/emucore/Joy2BPlus.cxx',
   'core/src/emucore/CartE7.cxx',
   'core/src/emucore/OSystemStandalone.cxx',
   'core/src/emucore/tia/Player.cxx',
   'core/src/emucore/tia/LatchedInput.cxx',
   'core/src/emucore/tia/Missile.cxx',
   'core/src/emucore/tia/frame-manager/FrameLayoutDetector.cxx',
   'core/src/emucore/tia/frame-manager/AbstractFrameManager.cxx',
   'core/src/emucore/tia/frame-manager/FrameManager.cxx',
   'core/src/emucore/tia/frame-manager/JitterEmulation.cxx',
   'core/src/emucore/tia/AnalogReadout.cxx',
   'core/src/emucore/tia/Background.cxx',
   'core/src/emucore/tia/DrawCounterDecodes.cxx',
   'core/src/emucore/tia/TIA.cxx',
   'core/src/emucore/tia/Playfield.cxx',
   'core/src/emucore/tia/Audio.cxx',
   'core/src/emucore/tia/AudioChannel.cxx',
   'core/src/emucore/tia/Ball.cxx',
   'core/src/emucore/CartARM.cxx',
   'core/src/emucore/PropsSet.cxx',
   'core/src/emucore/ProfilingRunner.cxx',
   'core/src/emucore/CartUA.cxx',
   'core/src/emucore/CartE0.cxx',
   'core/src/emucore/Booster.cxx',
   'core/src/emucore/CartEnhanced.cxx',
   'core/src/emucore/FSNode.cxx',
   'core/src/emucore/CartCDF.cxx',
   'core/src/emucore/ControllerDetector.cxx',
   'core/src/emucore/MindLink.cxx',
   'core/src/emucore/Cart3EPlus.cxx',
   'core/src/emucore/MT24LC256.cxx',
   'core/src/emucore/CartDF.cxx',
   'core/src/emucore/Control.cxx',
   'core/src/emucore/AtariVox.cxx',
   'core/src/os/unix/SerialPortUNIX.cxx',
   'core/src/os/unix/FSNodePOSIX.cxx',
   'core/src/os/unix/OSystemUNIX.cxx',
   'core/src/lib/tinyexif/tinyexif.cxx',
   'core/src/lib/zlib/gzlib.c',
   'core/src/lib/zlib/infback.c',
   'core/src/lib/zlib/gzread.c',
   'core/src/lib/zlib/gzclose.c',
   'core/src/lib/zlib/trees.c',
   'core/src/lib/zlib/gzwrite.c',
   'core/src/lib/zlib/inflate.c',
   'core/src/lib/zlib/adler32.c',
   'core/src/lib/zlib/compress.c',
   'core/src/lib/zlib/deflate.c',
   'core/src/lib/zlib/inftrees.c',
   'core/src/lib/zlib/uncompr.c',
   'core/src/lib/zlib/crc32.c',
   'core/src/lib/zlib/inffast.c',
   'core/src/lib/zlib/zutil.c',
   'core/src/lib/sqlite/sqlite3.c',
   'core/src/lib/nanojpeg/nanojpeg.c',
]

baseStellaIncludeDirs = [
 '.',
  'core/src/emucore',
  'core/src/common',
  'core/src/common/tv_filters',
  'core/src/emucore/tia',
  'core/src/emucore/tia/frame-manager',
  'core/src/lib/json',
  'core/src/common/repository/sqlite',
  'core/src/os/unix',
  'core/src/gui',
  'core/src/lib/httplib',
  'core/src/lib/sqlite',
]

baseStellaCompileArgs = [
  '-DSDL_SUPPORT',
  '-DUNIX',
  '-DBSPF_UNIX',
  '-DGUI_SUPPORT',
  '-DWINDOWED_SUPPORT',
  '-DJOYSTICK_SUPPORT',
  '-D_REENTRANT',
    '-Wno-multichar'
]

# baseStella Core Configuration

 baseStellaDependency = declare_dependency(
  compile_args        : [  baseStellaCompileArgs ],
  include_directories : include_directories(baseStellaIncludeDirs),
  sources             : [ baseStellaSrc ],
  dependencies        : [  
                          dependency('sdl2',  required : true),
                        ]
 )
