# newStella Core sources

newStellaSrc =  [
  'core/os/unix/FSNodePOSIX.cxx',
  'core/os/unix/OSystemUNIX.cxx',
  'core/os/unix/SerialPortUNIX.cxx',
  'core/common/AudioQueue.cxx',
  'core/common/AudioSettings.cxx',
  'core/common/Base.cxx',
  'core/common/DevSettingsHandler.cxx',
  'core/common/FpsMeter.cxx',
  'core/common/FSNodeZIP.cxx',
  'core/common/JoyMap.cxx',
  'core/common/JPGLibrary.cxx',
  'core/common/KeyMap.cxx',
  'core/common/Logger.cxx',
  'core/common/MouseControl.cxx',
  'core/common/PaletteHandler.cxx',
  'core/common/PhosphorHandler.cxx',
  'core/common/PKeyboardHandler.cxx',
  'core/common/PNGLibrary.cxx',
  'core/common/RewindManager.cxx',
  'core/common/StaggeredLogger.cxx',
  'core/common/StateManager.cxx',
  'core/common/ThreadDebugging.cxx',
  'core/common/TimerManager.cxx',
  'core/common/VideoModeHandler.cxx',
  'core/common/ZipHandler.cxx',
  'core/common/audio/SimpleResampler.cxx',
  'core/common/audio/ConvolutionBuffer.cxx',
  'core/common/audio/LanczosResampler.cxx',
  'core/common/audio/HighPass.cxx',
  'core/common/tv_filters/NTSCFilter.cxx',
  'core/common/tv_filters/AtariNTSC.cxx',
  'core/emucore/AtariVox.cxx',
  'core/emucore/Bankswitch.cxx',
  'core/emucore/Booster.cxx',
  'core/emucore/Cart.cxx',
  'core/emucore/CartARM.cxx',
  'core/emucore/CartCreator.cxx',
  'core/emucore/CartDetector.cxx',
  'core/emucore/CartEnhanced.cxx',
  'core/emucore/Cart0840.cxx',
  'core/emucore/Cart0FA0.cxx',
  'core/emucore/Cart2K.cxx',
  'core/emucore/Cart3E.cxx',
  'core/emucore/Cart3EPlus.cxx',
  'core/emucore/Cart3EX.cxx',
  'core/emucore/Cart3F.cxx',
  'core/emucore/Cart4A50.cxx',
  'core/emucore/Cart4K.cxx',
  'core/emucore/Cart4KSC.cxx',
  'core/emucore/CartAR.cxx',
  'core/emucore/CartBUS.cxx',
  'core/emucore/CartCDF.cxx',
  'core/emucore/CartCM.cxx',
  'core/emucore/CartCTY.cxx',
  'core/emucore/CartCV.cxx',
  'core/emucore/CartDPC.cxx',
  'core/emucore/CartDPCPlus.cxx',
  'core/emucore/CartE0.cxx',
  'core/emucore/CartE7.cxx',
  'core/emucore/CartEF.cxx',
  'core/emucore/CartEFSC.cxx',
  'core/emucore/CartBF.cxx',
  'core/emucore/CartBFSC.cxx',
  'core/emucore/CartDF.cxx',
  'core/emucore/CartDFSC.cxx',
  'core/emucore/CartF0.cxx',
  'core/emucore/CartF4.cxx',
  'core/emucore/CartF4SC.cxx',
  'core/emucore/CartF6.cxx',
  'core/emucore/CartF6SC.cxx',
  'core/emucore/CartF8.cxx',
  'core/emucore/CartF8SC.cxx',
  'core/emucore/CartFA.cxx',
  'core/emucore/CartFA2.cxx',
  'core/emucore/CartFC.cxx',
  'core/emucore/CartFE.cxx',
  'core/emucore/CartMDM.cxx',
  'core/emucore/CartMVC.cxx',
  'core/emucore/CartSB.cxx',
  'core/emucore/CartTVBoy.cxx',
  'core/emucore/CartUA.cxx',
  'core/emucore/CartWD.cxx',
  'core/emucore/CartX07.cxx',
  'core/emucore/CompuMate.cxx',
  'core/emucore/Console.cxx',
  'core/emucore/Control.cxx',
  'core/emucore/ControllerDetector.cxx',
  'core/emucore/DispatchResult.cxx',
  'core/emucore/Driving.cxx',
  'core/emucore/EventHandler.cxx',
  'core/emucore/EmulationTiming.cxx',
  'core/emucore/FrameBuffer.cxx',
  'core/emucore/FBSurface.cxx',
  'core/emucore/FSNode.cxx',
  'core/emucore/Genesis.cxx',
  'core/emucore/GlobalKeyHandler.cxx',
  'core/emucore/Joy2BPlus.cxx',
  'core/emucore/Joystick.cxx',
  'core/emucore/Keyboard.cxx',
  'core/emucore/KidVid.cxx',
  'core/emucore/Lightgun.cxx',
  'core/emucore/MindLink.cxx',
  'core/emucore/M6502.cxx',
  'core/emucore/M6532.cxx',
  'core/emucore/MT24LC256.cxx',
  'core/emucore/MD5.cxx',
  'core/emucore/OSystem.cxx',
  'core/emucore/OSystemStandalone.cxx',
  'core/emucore/Paddles.cxx',
  'core/emucore/PlusROM.cxx',
  'core/emucore/PointingDevice.cxx',
  'core/emucore/ProfilingRunner.cxx',
  'core/emucore/Props.cxx',
  'core/emucore/PropsSet.cxx',
  'core/emucore/QuadTari.cxx',
  'core/emucore/SaveKey.cxx',
  'core/emucore/Serializer.cxx',
  'core/emucore/Settings.cxx',
  'core/emucore/Switches.cxx',
  'core/emucore/System.cxx',
  'core/emucore/TIASurface.cxx',
  'core/emucore/Thumbulator.cxx',
  'core/emucore/tia/TIA.cxx',
  'core/emucore/tia/Playfield.cxx',
  'core/emucore/tia/DrawCounterDecodes.cxx',
  'core/emucore/tia/Missile.cxx',
  'core/emucore/tia/Player.cxx',
  'core/emucore/tia/Ball.cxx',
  'core/emucore/tia/Background.cxx',
  'core/emucore/tia/LatchedInput.cxx',
  'core/emucore/tia/AnalogReadout.cxx',
  'core/emucore/tia/Audio.cxx',
  'core/emucore/tia/AudioChannel.cxx',
  'core/emucore/tia/frame-manager/FrameManager.cxx',
  'core/emucore/tia/frame-manager/AbstractFrameManager.cxx',
  'core/emucore/tia/frame-manager/FrameLayoutDetector.cxx',
  'core/emucore/tia/frame-manager/JitterEmulation.cxx',
  'core/common/EventHandlerSDL2.cxx',
  'core/common/FBBackendSDL2.cxx',
  'core/common/FBSurfaceSDL2.cxx',
  'core/common/SoundSDL2.cxx',
  'core/common/sdl_blitter/BilinearBlitter.cxx',
  'core/common/sdl_blitter/QisBlitter.cxx',
  'core/common/sdl_blitter/BlitterFactory.cxx',
]

newStellaIncludeDirs = [
 '.',
 'core/',
 'core/common',
 'core/common/audio',
 'core/common/sdl_blitter',
 'core/common/tv_filters',
 'core/emucore',
 'core/emucore/exception',
 'core/emucore/tia',
 'core/emucore/tia/frame-manager',
 'core/os/unix',
]

newStellaCompileArgs = [
  '-DUNIX',
  '-DBSPF_UNIX',
  '-DSDL_SUPPORT',
  '-D_JAFFAR_PLAY'
]

# newStella Core Configuration

 newStellaDependency = declare_dependency(
  compile_args        : [ newStellaCompileArgs ],
  include_directories : include_directories(newStellaIncludeDirs),
  sources             : [ newStellaSrc ],
  dependencies        : [  
                          dependency('sdl2',  required : true),
                        ]
 )
